--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 django = "*"
+sphinx = "*"
+sphinxcontrib-needs = "*"
+sphinxcontrib-plantuml = "*"
 
 [requires]
 python_version = "3.8"
